added header section

--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
               </ul>
             </div>
           </div>
-    </nav>    
+    </nav>  
+    <!-- Header section here -->
+    <header class="contaner mx-auto max-w-[1440px]">
+        <div class="hero min-h-1/2" style="background-image: url('images/banner.png');">
+            <div class="hero-overlay"></div>
+            <div class="hero-content text-center">
+              <div class="max-w-md lg:max-w-[663px] py-32">
+                <h1 class="mb-5 text-white text-5xl md:text-8xl font-source-serif font-bold ">About Us</h1>
+                <p class="mb-5 text-center text-white font-lato  text-2xl font-medium">From preschool to pre-tertiary, our students enjoy fun, interactive and relevant lessons and are empowered to think beyond the confines of the classroom.</p>
+                <button class=" btn font-lato text-lg font-semibold bg-yellow-300 border-none text-black">See More</button>
+              </div>
+            </div>
+          </div>
+    </header>  
 </body>
 </html>
