added preparing section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <!-- nav section-->
+    <!-- nav section here-->
     <nav class="bg-yellow-50 font-interlg:text-black">
         <div class="w-full items-center">
             <div class=" lg:bg-[#CBCDA9]">
@@ -90,5 +90,48 @@
             </div>
           </div>
     </header>  
+    <!-- Main section here -->
+    <main class="container mx-auto max-w-[1440px]">
+        <!--  Preparing Students section -->
+        <section class="pt-24 bg-yellow-50 dark:text-black">
+            <h2 class="text-center mb-5 lg:mb-[108px] font-semibold font-source-serif text-4xl md:text-[45px]">Preparing Students to Achieve Success</h2>
+            <!-- First images -->
+            <div class="hero px-5 md:px-40 ">
+                <div class="hero-content flex-col justify-between lg:flex-row-reverse">
+                  <img class="max-w-full md:max-w-96" src="images/image1.png" />
+                  <div>
+                    <h1 class=" text-3xl md:text-5xl font-bold">Developing Confident and
+                        Successful Learners</h1>
+                    <p class="py-6">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut al Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut al</p>
+                    <button class="btn bg-btn-primary">Get Started</button>
+                  </div>
+                </div>
+              </div>
+              <!-- second image -->
+            <div class="hero px-5 md:px-40 ">
+                <div class="hero-content flex-col justify-between lg:flex-row">
+                  <img class="max-w-full md:max-w-96" src="images/image2.png" />
+                  <div>
+                    <h1 class=" text-3xl md:text-5xl font-bold">Developing Confident and
+                        Successful Learners</h1>
+                    <p class="py-6">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut al Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut al</p>
+                    <button class="btn bg-btn-primary">Get Started</button>
+                  </div>
+                </div>
+              </div>
+              <!-- third image -->
+            <div class="hero px-5 md:px-40 ">
+                <div class="hero-content flex-col justify-between lg:flex-row-reverse">
+                  <img class="max-w-full md:max-w-96" src="images/image3.png" />
+                  <div>
+                    <h1 class=" text-3xl md:text-5xl font-bold">Developing Confident and
+                        Successful Learners</h1>
+                    <p class="py-6">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut al Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut al</p>
+                    <button class="btn bg-btn-primary">Get Started</button>
+                  </div>
+                </div>
+              </div>
+        </section>
+    </main>
 </body>
 </html>
