--- a/index.html
+++ b/index.html
@@ -132,6 +132,40 @@
                 </div>
               </div>
         </section>
+        <!-- Happy customers section here -->
+        <section class="container mx-auto p-5 lg:px-40 lg:py-[150px] bg-[#FFFFFA] font-source-serif">
+          <div class="flex flex-col lg:flex-row justify-between items-center">
+            <h2 class="text-3xl mb-5 lg:mb-0 font-bold text-center font-source-serif">Happy Customers Says</h2> 
+            <div class="flex gap-5 ">
+              <div class="flex justify-center items-center bg-zinc-100 w-12 h-12 rounded-full"><img class="" src="images/arrow-left-dark.png" alt=""></div>
+              <div class="flex justify-center items-center bg-amber-500 w-12 h-12 rounded-full"><img src="images/arrow-right-white.png" alt=""></div>
+            </div>
+          </div>
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-9">
+            <!-- box-1 -->
+            <div class="card bg-yellow-50 border relative">
+              <figure class="absolute top-8 right-7 opacity-10"><img src="images/comma.png" alt=""></figure>
+              <figure class="px-10 pt-10">
+                <img src="images/face.png" />
+              </figure>
+              <div class="card-body p-[30px] items-center text-center">
+                <h2 class="card-title text-zinc-800 text-lg mb-7">Lyod Gomez</h2>
+                <p class="text-zinc-800 text-lg">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system.</p>
+              </div>
+            </div>
+            <!-- box-2 -->
+            <div class="card bg-yellow-50 border relative">
+              <figure class="absolute top-8 right-7 opacity-10"><img src="images/comma.png" alt=""></figure>
+              <figure class="px-10 pt-10">
+                <img src="images/face.png" />
+              </figure>
+              <div class="card-body p-[30px] items-center text-center">
+                <h2 class="card-title text-zinc-800 text-lg mb-7">Lyod Gomez</h2>
+                <p class="text-zinc-800 text-lg">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system.</p>
+              </div>
+            </div>
+          </div>
+        </section>
     </main>
 </body>
 </html>
