added why it's works section

--- a/index.html
+++ b/index.html
@@ -166,6 +166,49 @@
             </div>
           </div>
         </section>
+        <!-- why is's works section here -->
+        <section class="font-source-serif bg-yellow-50 p-8 md:p-12 lg:p-40">
+          <div class="mb-12">
+            <h2 class="text-black text-center text-[45px] font-semibold">Why it’s works</h2>
+            <div class="max-w-[309px] h-[3px] bg-yellow-300 mx-auto"></div>
+          </div>
+          <!-- grid items here -->
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
+            <!-- Image-1 -->
+            <div class="card bg-yellow-50">
+              <figure class="px-10 pt-10">
+                <img src="images/icon1.png" />
+              </figure>
+              <div class="card-body p-0 items-center text-center">
+                <h2 class="card-title text-black text-2xl font-semibold mt-6 mb-0">Personalized learning</h2>
+                <p class="text-black text-lg font-lato max-w-[334px]">Students practice at their own pace, first filling in gaps in their understanding and then accelerating their learning.</p>
+              </div>
+            </div>
+            <!-- Image-2 -->
+            <div class="card bg-yellow-50">
+              <figure class="px-10 pt-10">
+                <img src="images/icon2.png" />
+              </figure>
+              <div class="card-body p-0 items-center text-center">
+                <h2 class="card-title text-black text-2xl font-semibold mt-6 mb-0">Trusted content</h2>
+                <p class="text-black text-lg font-lato max-w-[334px]">Created by experts, library of trusted practice and lessons covers math, science, and more. Always free for learners and teachers.</p>
+              </div>
+            </div>
+            <!-- Image-3 -->
+            <div class="card bg-yellow-50">
+              <figure class="px-10 pt-10">
+                <img src="images/icon3.png" />
+              </figure>
+              <div class="card-body p-0 items-center text-center">
+                <h2 class="card-title text-black text-2xl font-semibold mt-6 mb-0">Tools to empower teachers</h2>
+                <p class="text-black text-lg font-lato max-w-[334px]">Teachers can identify gaps in their students’ understanding, tailor instruction, and meet the needs of every student.</p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <hr class=" w-full h-2.5 bg-yellow-300">
+        <section class="font-source-serif bg-yellow-50 p-8 md:p-12 lg:py-16">
+        </section>
     </main>
 </body>
 </html>
