added contact us section

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         <div class="w-full items-center">
             <div class=" lg:bg-[#CBCDA9]">
               <div class="dropdown">
-                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <div tabindex="0" role="button" class="btn btn-ghost dark:text-black lg:hidden">
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
                 </div>
                 <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 items-center">
                   <li class="font-medium"><a>Home</a></li>
-                  <li class="font-black"><a>About us</a></li>
-                  <li class="font-medium"><a>Contact</a></li>
+                  <li class="font-black"><a href="index.html">About us</a></li>
+                  <li class="font-medium"><a href="contact.html">Contact</a></li>
                   <label class="swap swap-rotate">
   
                     <!-- this hidden checkbox controls the state -->
@@ -71,8 +71,8 @@
             <div class="navbar-center hidden lg:flex justify-center">
               <ul class="menu menu-horizontal px-1">
                 <li class="font-medium"><a>Home</a></li>
-                <li class="font-black"><a>About us</a></li>
-                <li class="font-medium"><a>Contact</a></li>
+                <li class="font-black"><a href="index.html">About us</a></li>
+                <li class="font-medium"><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -166,7 +166,7 @@
             </div>
           </div>
         </section>
-        <!-- why is's works section here -->
+        <!-- why it's works section here -->
         <section class="font-source-serif bg-yellow-50 p-8 md:p-12 lg:p-40">
           <div class="mb-12">
             <h2 class="text-black text-center text-[45px] font-semibold">Why it’s works</h2>
