--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <div class="max-w-md lg:max-w-[663px] py-32">
                 <h1 class="mb-5 text-white text-5xl md:text-8xl font-source-serif font-bold ">About Us</h1>
                 <p class="mb-5 text-center text-white font-lato  text-2xl font-medium">From preschool to pre-tertiary, our students enjoy fun, interactive and relevant lessons and are empowered to think beyond the confines of the classroom.</p>
-                <button class=" btn font-lato text-lg font-semibold bg-yellow-300 border-none text-black">See More</button>
+                <button class=" btn font-lato text-lg font-semibold bg-btn-primary border-none text-black">See More</button>
               </div>
             </div>
           </div>
