fixed the contact us section

--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
         <div class="flex flex-col justify-center items-center lg:flex-row mx-0 md:mx-40 lg:mx-60 lg:mx-72">
             <!-- form section here -->
             <div class="gap-3 gap-0 w-full lg:w-1/2 bg-stone-900 flex-1  lg:rounded-l-lg px-7 py-7 md:py-[73px]">
-                <h2 class="dark:text-white text-[32px] ">Get in touch with us</h2>
+                <h2 class="text-white dark:text-white text-[32px] ">Get in touch with us</h2>
                 <form action="" class="font-lexend-deca">
                   <!-- Name section -->
                   <label for="name" class="block my-2 text-sm text-xs font-light text-stone-300">Name</label>
@@ -97,7 +97,7 @@
                 <!-- Message section -->
                 <label for="message" class="block my-2 text-sm text-xs font-light text-stone-300">Message</label>
                 <textarea id="message" rows="4" class="block text-white border border-neutral-400  text-sm rounded-sm block w-full p-2.5 bg-zinc-800" placeholder="Type your query here....."></textarea>
-                <button type="submit" class="text-stone-900 bg-btn-primary focus:ring-1 focus:outline-none focus:ring-neutral-400 font-medium rounded-sm text-sm px-5 py-2.5 mt-5 text-center">Register new account</button>
+                <button type="submit" class="text-stone-900 bg-btn-primary focus:ring-1 focus:outline-none focus:ring-neutral-400 font-medium rounded-sm text-sm px-5 py-2.5 mt-5 text-center">Send my message</button>
 
                 </form>       
             </div>
